--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -2,8 +2,6 @@ FROM debian:jessie
 MAINTAINER Jean-Avit Promis "docker@katagena.com"
 LABEL org.label-schema.vcs-url="https://github.com/nouchka/docker-keepass"
 LABEL version="latest"
-ENV KEEPASS_VERSION 1.8.4.1
-ENV KEEPASS_SHA256 430948219b0bc282fbf0760da7b66f72b13eee4db57de457e563342d253bd8ae
 
 RUN export uid=1000 gid=1000 && \
 	mkdir -p /home/user && \
@@ -15,19 +13,15 @@ RUN apt-get update && \
 	DEBIAN_FRONTEND=noninteractive apt-get -yq install xvfb curl keepass2 unzip wget libmono-system-xml-linq4.0-cil libmono-system-data-datasetextensions4.0-cil libmono-system-runtime-serialization4.0-cil mono-mcs && \
 	rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
-RUN wget https://github.com/pfn/keepasshttp/archive/$KEEPASS_VERSION.zip && \
-	unzip $KEEPASS_VERSION.zip && \
-	echo "$KEEPASS_SHA256  keepasshttp-$KEEPASS_VERSION/KeePassHttp.plgx" > SHA256SUM && \
-	sha256sum -c SHA256SUM && \
-	mv keepasshttp-$KEEPASS_VERSION/KeePassHttp.plgx /usr/lib/keepass2/ && \
+RUN wget https://raw.github.com/pfn/keepasshttp/master/KeePassHttp.plgx -O  /usr/lib/keepass2/KeePassHttp.plgx && \
 	chmod 644 /usr/lib/keepass2/KeePassHttp.plgx
 
 COPY mrmcd.kdbx /
 COPY start_xvfb.sh /
+COPY KeePass.config.xml /home/user/.config/KeePass/KeePass.config.xml
 
 USER user
 ENV HOME /home/user
 
 ENTRYPOINT ["/start_xvfb.sh"]
 CMD ["/usr/bin/keepass2", "/mrmcd.kdbx", "-pw:mrmcd"]
-#CMD ["/bin/sleep", "99999999999999"]
